- Remove deprecations and unused code - Ensure entities toString() are not interdependent - Remove unrequired calls to ObtainedUpgradeBo (repository can do the work)