@@ -4,12 +4,10 @@ import com.kevinguanchedarias.owgejava.dto.ObtainedUpgradeDto;
 import com.kevinguanchedarias.owgejava.entity.ObtainedUpgrade;
 import com.kevinguanchedarias.owgejava.entity.Upgrade;
 import com.kevinguanchedarias.owgejava.entity.UserStorage;
-import com.kevinguanchedarias.owgejava.enumerations.ImprovementTypeEnum;
 import com.kevinguanchedarias.owgejava.interfaces.ImprovementSource;
 import com.kevinguanchedarias.owgejava.pojo.GroupedImprovement;
 import com.kevinguanchedarias.owgejava.repository.ObtainedUpgradeRepository;
 import com.kevinguanchedarias.taggablecache.manager.TaggableCacheManager;
-import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Component;
@@ -18,11 +16,11 @@ import org.springframework.transaction.annotation.Transactional;
 import javax.annotation.PostConstruct;
 import java.io.Serial;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ObtainedUpgradeBo implements BaseBo<Long, ObtainedUpgrade, ObtainedUpgradeDto>, ImprovementSource {
     public static final String OBTAINED_UPGRADE_CACHE_TAG = "obtained_upgrade";
+    public static final String OBTANED_UPGRADE_CHANGE_EVENT = "obtained_upgrades_change";
 
     @Serial
     private static final long serialVersionUID = 2294363946431892708L;
@@ -70,7 +68,6 @@ public class ObtainedUpgradeBo implements BaseBo<Long, ObtainedUpgrade, Obtained
     }
 
     /**
-     * @param upgrade
      * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
      * @since 0.9.0
      */
@@ -84,68 +81,15 @@ public class ObtainedUpgradeBo implements BaseBo<Long, ObtainedUpgrade, Obtained
      * @since 0.9.0
      */
     public void emitObtainedChange(Integer userId) {
-        socketIoService.sendMessage(userId, "obtained_upgrades_change", () -> toDto(findByUser(userId)));
+        socketIoService.sendMessage(userId, OBTANED_UPGRADE_CHANGE_EVENT, () -> toDto(obtainedUpgradeRepository.findByUserId(userId)));
     }
 
     /**
-     * Returns obtained upgrades by given user
-     *
-     * @param userId id of the user
-     * @return
-     * @author Kevin Guanche Darias
-     */
-    public List<ObtainedUpgrade> findByUser(Integer userId) {
-        return obtainedUpgradeRepository.findByUserIdId(userId);
-    }
-
-    public ObtainedUpgrade findByUserAndUpgrade(Integer userId, Integer upgradeId) {
-        return obtainedUpgradeRepository.findOneByUserIdIdAndUpgradeId(userId, upgradeId);
-    }
-
-    /**
-     * @param upgrade
      * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
      * @since 0.9.0
      */
     public List<ObtainedUpgrade> findByUpgrade(Upgrade upgrade) {
         return obtainedUpgradeRepository.findByUpgrade(upgrade);
-    }
-
-    /**
-     * Does user has the given upgrade obtained?
-     *
-     * @param userId    id of the user
-     * @param upgradeId id of the asked upgrade
-     * @return true if upgrade has been obtained
-     * @author Kevin Guanche Darias
-     */
-    public boolean userHasUpgrade(Integer userId, Integer upgradeId) {
-        return findUserObtainedUpgrade(userId, upgradeId) != null;
-    }
-
-    /**
-     * Find user's obtained upgrade
-     *
-     * @param userId
-     * @param upgradeId
-     * @author Kevin Guanche Darias
-     */
-    public ObtainedUpgrade findUserObtainedUpgrade(Integer userId, Integer upgradeId) {
-        return obtainedUpgradeRepository.findOneByUserIdIdAndUpgradeId(userId, upgradeId);
-    }
-
-    /**
-     * Returns the total sum of the value for the specified improvement type for
-     * user obtained upgrades
-     *
-     * @param user
-     * @param type The expected type
-     * @return
-     * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
-     */
-    public Long sumUnitTypeImprovementByUserAndImprovementType(UserStorage user, ImprovementTypeEnum type) {
-        return ObjectUtils.firstNonNull(
-                obtainedUpgradeRepository.sumByUserAndImprovementUnitTypeImprovementType(user, type.name()), 0L);
     }
 
     /*
@@ -156,9 +100,8 @@ public class ObtainedUpgradeBo implements BaseBo<Long, ObtainedUpgrade, Obtained
      */
     @Override
     public GroupedImprovement calculateImprovement(UserStorage user) {
-        return new GroupedImprovement().add(findByUser(user.getId()).stream()
+        return new GroupedImprovement().add(obtainedUpgradeRepository.findByUserId(user.getId()).stream()
                 .map(current -> improvementBo.multiplyValues(current.getUpgrade().getImprovement(), current.getLevel()))
-                .collect(Collectors.toList()));
+                .toList());
     }
-
 }
